fix: align headers

--- a/packages/components/src/styles/Menu.module.css
+++ b/packages/components/src/styles/Menu.module.css
@@ -14,6 +14,12 @@
     margin-block: var(--lp-spacing-200);
     padding-inline: var(--lp-size-2);
   }
+
+  &:has([data-selection-mode]) {
+    & header {
+      padding-left: var(--lp-spacing-800);
+    }
+  }
 }
 
 .item {
